--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ APP_SECRET=4cbfae0c3688642fe86fbb81b7d2c386
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:smileroot@127.0.0.1:3306/fackbooks?serverVersion=8.0"
+DATABASE_URL="mysql://root:novateroot@127.0.0.1:3306/Novate?serverVersion=8.0"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
